ch14.5 add opcode for constant values

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,11 @@
   "cSpell.words": [
     "clox"
   ],
+  "files.associations": {
+    "*.ejs": "html",
+    "*.ts": "typescriptreact",
+    "*.css": "tailwindcss",
+    "chunk.h": "c",
+    "value.h": "c"
+  },
 }
