--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
     "*.ts": "typescriptreact",
     "*.css": "tailwindcss",
     "chunk.h": "c",
-    "value.h": "c"
+    "value.h": "c",
+    "debug.h": "c",
+    "vm.h": "c"
   },
 }
