chap 19.5 free up memory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,9 @@
     "tuple": "c",
     "object.h": "c",
     "memory.h": "c",
-    "stdarg.h": "c"
+    "stdarg.h": "c",
+    "__locale": "c",
+    "string": "c",
+    "string_view": "c"
   },
 }
