chap 20.5 better string comparison

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "stdarg.h": "c",
     "__locale": "c",
     "string": "c",
-    "string_view": "c"
+    "string_view": "c",
+    "table.h": "c"
   },
 }
