ch22.3 declare locals

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
     "__locale": "c",
     "string": "c",
     "string_view": "c",
-    "table.h": "c"
+    "table.h": "c",
+    "stdlib.h": "c"
   },
 }
